[project]
name = "chainsmoker"
version = "0.0.1"
description = "A cli interface to find transfer chains for registers"
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["rich"]

[project.scripts]
chainsmoker = "chainsmoker.main:main"

[tool.hatch.build]
packages = ["src/chainsmoker"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
